--- a/404.md
+++ b/404.md
@@ -2,3 +2,6 @@
 layout: check
 title: 404
 ---
+<script>
+  setTimeout(() => { location.href = location.origin + "?pathname=" + location.pathname; }, 5);
+</script>
