--- a/404.md
+++ b/404.md
@@ -3,5 +3,5 @@ layout: check
 title: 404
 ---
 <script>
-  setTimeout(() => { location.href = {{ site.github.url }} + "?pathname=" + location.pathname; }, 5);
+  setTimeout(() => { location.href = "{{ site.github.url }}" + "?pathname=" + location.pathname; }, 5);
 </script>
