--- a/404.md
+++ b/404.md
@@ -3,5 +3,5 @@ layout: check
 title: 404
 ---
 <script>
-  setTimeout(() => { location.href = "{{ site.github.url }}" + "?pathname=" + location.pathname; }, 5);
+  setTimeout(() => { location.href = /^https:\/\/[a-z\d-]+\.github\.io\/[^\/]+/.exec(location.href)[0] + "?pathname=" + location.pathname; }, 5);
 </script>
