--- a/404.md
+++ b/404.md
@@ -1,7 +1,17 @@
----
-layout: check
-title: 404
----
-<script>
-  setTimeout(() => { location.href = /^https:\/\/[a-z\d-]+\.github\.io\/[^\/]+/.exec(location.href)[0] + "?pathname=" + location.pathname; }, 5);
-</script>
+<!doctype html>
+<html lang="ja">
+<head>
+  <link rel="canonical" href="{{ site.github.url }}"/>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <meta http-equiv="refresh" content="0;url={{ site.github.url }}" />
+  <title>404</title>
+</head>
+<body>
+  <h1>Redirecting...</h1>
+  <a href="{{ site.github.url }}">Click here if you are not redirected.<a>
+  <script>
+    let targets = /^(https:\/\/[a-z\d-]+\.github\.io\/[^\/\?]+)([^\?]+)/.exec(location.href)
+    location.href = targets[1] + "?pathname=" + targets[2];
+  </script>
+</body>
+</html>
